--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,3 +9,40 @@ $primary-color: #004A87;
 $primary-background-color: #ffffff;
 $secondary-background-color: #000000;
 
+$primary-light-color: #005CAB;
+$primary-color: #004A87;
+$primary-dark-color: #003A6B;
+$primary-soft-color: #0183EF;
+$seconday-soft-color:#fbdbae;
+$seconday-light-color: #FF9400;
+$secondary-color: #D17900;
+$secondary-dark-color: #A56000;
+$primary-red-color: #D10500;
+$secondary-red-color: #e46765;
+$disabled-gray-color: #B8BFC4;
+
+$green-01-color: #CFFD00;
+$green-02-color: #C9F600;
+$green-03-color: #A5CA00;
+$green-04-color: #829F00;
+$green-05-color: #5C7000;
+$green-06-color: #0c3a0f;
+$green-07-color: #d9e4a3;
+$green-08-color: #dff6dd;
+
+$warning-light-color: #ffc574;
+$warning-dark-color: #502f00;
+$error-light-color: #ffbab9;
+$error-dark-color: #500100;
+$error-icon-color: #A50400;
+$warning-info-color: #b4ddff;
+$secondary-info-color: #d9ebfa;
+
+$primary-gray-color: #606f7b;
+$secondary-gray-color: #F3F6F9;
+$tertiary-gray-color: #DAE2E8;
+$line-gray-color: #EEF2F4;
+$line-gray-separator: #E7E9EB;
+$line-background-color: #F7F9FB;
+$highlight-background-color: #d4ecff;
+$hover-button-color: #f5fafd;
