--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,17 @@
+@import "src/styles/variables.scss";
+
 html{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-size: 62.5%;
 }
+
+span{
+    font-family: $font-family;
+}
+
+
 body{
     margin: 0;
     padding: 0;
