--- a/src/app/private/components/header/header.component.scss
+++ b/src/app/private/components/header/header.component.scss
@@ -8,7 +8,7 @@
     padding-left: 1.2rem;
     padding-right: 1.6rem;
     width: 100vw;
-    border-bottom: 0.1rem solid $primary-light-color;
+    border-bottom: 0.1rem solid $primary-dark-color;
 }
 
 h2{
