--- a/src/app/private/components/menu/menu.component.scss
+++ b/src/app/private/components/menu/menu.component.scss
@@ -1,10 +1,10 @@
 @import "src/styles/variables.scss";
 
 .sidebar{
-    min-height: 100%;
+    min-height: calc(100vh - 6.2rem);
     width: 0px;
     overflow-x: hidden;
-    border-right: 0.1rem solid $warning-info-color;
+    border-right: 0.1rem solid $tertiary-gray-color;
 }
 
 .sidebar ul{
@@ -23,13 +23,13 @@
 }
 
 .sidebar ul li div a{
-    color: $primary-dark-color;
+    color: $secondary-background-color;
     align-items: center;
     text-decoration: none;
     cursor: pointer;
     width: 100%;
     font-size: $font-large;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .sidebar ul li div a:hover{
@@ -43,7 +43,7 @@
 }
 
 .sidebar.abierta{
-    width: 22rem;
+    width: 22.4rem;
 }
 
 
