agregando grid weekview

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -108,7 +108,7 @@ span{
 .container-login img{
     height: 5rem;
     width: max-content;
-    position: absolute;
+    position: fixed;
     bottom: 0;
 }
 
