--- a/src/app/private/modules/carnetizate/carnetizate.component.scss
+++ b/src/app/private/modules/carnetizate/carnetizate.component.scss
@@ -1,5 +1,13 @@
 @import "src/styles/variables.scss";
 
+.container{
+    display: flex;
+    align-items: center;
+    position: relative;
+    top: 0;
+    flex-direction: column;
+}
+
 h3{
     font-family: $font-family;
     font-size: $font-large;
@@ -10,4 +18,29 @@ h3{
 #calendario{
     font-family: $font-family;
     font-size: $font-medium;
+}
+
+div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button{
+    border: 0.1rem solid $primary-color;
+    font-size: $font-large;
+    font-weight: 500;
+    width: 12rem;
+    height: 3.6rem;
+}
+
+.cancelar{
+    color: $primary-color ;
+    background-color: $primary-background-color;
+    margin-right: 2rem;
+}
+
+.carnetizate{
+    color: $primary-background-color;
+    background-color: $primary-color;
 }
