--- a/src/app/private/private.component.html
+++ b/src/app/private/private.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="flex flex-row">
+<div class="flex">
     <div class="flex flex-column superficieMenu">
         <app-menu></app-menu>
     </div>
