--- a/src/app/private/modules/buscar/buscar.component.html
+++ b/src/app/private/modules/buscar/buscar.component.html
@@ -1,1 +1,55 @@
-<p>buscar works!</p>
+<div class="card">
+    <h5>Local Storage</h5>
+    <p-table #dt2  selectionMode="single" dataKey="id" [tableStyle]="{'min-width': '50rem'}"
+        [rows]="10" [paginator]="true" stateStorage="local" stateKey="statedemo-local">
+        <ng-template pTemplate="header">
+            <tr>
+                <th pSortableColumn="name" style="width:25%">Name <p-sortIcon field="name"></p-sortIcon></th>
+                <th pSortableColumn="country.name" style="width:25%">Country <p-sortIcon field="country.name"></p-sortIcon></th>
+                <th pSortableColumn="representative.name" style="width:25%">Representative <p-sortIcon field="representative.name"></p-sortIcon></th>
+                <th pSortableColumn="status" style="width:25%">Status <p-sortIcon field="status"></p-sortIcon></th>
+            </tr>
+            <tr>
+                <th>
+                    <input pInputText type="text" placeholder="Search by Name" class="w-full">
+                </th>
+                <th>
+                    <input pInputText type="text" placeholder="Search by Country" class="w-full">
+                </th>
+                <th>
+                    <input pInputText type="text" placeholder="Search by Representative" class="w-full">
+                </th>
+                <th>
+                    <input pInputText type="text" placeholder="Search by Status" class="w-full">
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-customer>
+            <tr [pSelectableRow]="customer">
+                <td>
+                    <span class="p-column-title">Name</span>
+            
+                </td>
+                <td>
+                    <span class="p-column-title">Country</span>
+                    <img src="assets/showcase/images/demo/flag/flag_placeholder.png" [class]="'flag flag-' + customer.country.code" width="30">
+                    <span class="image-text"></span>
+                </td>
+                <td>
+                    <span class="p-column-title">Representative</span>
+                    <img [alt]="customer.representative.name" src="assets/showcase/images/demo/avatar/{{customer.representative.image}}" width="32" style="vertical-align: middle" />
+                    <span class="image-text"></span>
+                </td>
+                <td>
+                    <span class="p-column-title">Status</span>
+                    <span [class]="'customer-badge status-' + customer.status"></span>
+                </td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+            <tr>
+                <td colspan="4">No customers found.</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
