--- a/src/app/private/modules/carnetizate/carnetizate.component.html
+++ b/src/app/private/modules/carnetizate/carnetizate.component.html
@@ -1,11 +1,13 @@
-<!-- <div class="container"> -->
-    <h3 *ngIf="user?.role == 1">Agenta tu cita para carnetizarte.</h3>
-    <full-calendar #calendar id="calendario"[options]='calendarOptions'></full-calendar>
-<!-- </div> -->
-<p-dialog header="Desea realizar petición de nuevo carnet" [modal]="true" [draggable]="false" [resizable]="false" [(visible)]="mostrarInfo" [dismissableMask]="true">
-    <h3>Desea agendar turno para sacar tu carnet en la hora </h3>
-    <div>
-        <button label="Cancelar" class="cancelar">Cancelar</button>
-        <button label="Carnetizate" class="carnetizate">Carnetizate</button>
+<div class="container">
+    <div class="titulo-calendario">
+        <h3 *ngIf="user?.role == 1">Agenta tu cita para carnetizarte.</h3>
+        <full-calendar #calendar id="calendario"[options]='calendarOptions'></full-calendar>
     </div>
-</p-dialog>
+    <p-dialog header="Desea realizar petición de nuevo carnet" [modal]="true" [draggable]="false" [resizable]="false" [(visible)]="mostrarInfo" [dismissableMask]="true">
+        <h3>Desea agendar turno para sacar tu carnet en la hora </h3>
+        <div>
+            <button label="Cancelar" class="cancelar">Cancelar</button>
+            <button label="Carnetizate" class="carnetizate">Carnetizate</button>
+        </div>
+    </p-dialog>
+</div>
