create guard and turn

--- a/src/app/private/modules/peticiones/peticiones.component.html
+++ b/src/app/private/modules/peticiones/peticiones.component.html
@@ -3,10 +3,10 @@
         <h3 *ngIf="user?.role == 2">Calendario de peticiones.</h3>
         <full-calendar #peticiones id="peticiones"[options]='calendarOptions'></full-calendar>
     </div>
-    <p-dialog header="Desea realizar petición de nuevo carnet" [modal]="true" [draggable]="false" [resizable]="false" [(visible)]="mostrarInfo" [dismissableMask]="true">
-        <h3>Desea agendar turno para sacar tu carnet en la hora </h3>
+    <p-dialog [modal]="true" [draggable]="false" [resizable]="false" [(visible)]="mostrarInfo" [dismissableMask]="true" [breakpoints]="{'960px': '75vw'}" [style]="{width: '50vw'}">
+        <h3>Peticion del estudiante </h3>
         <div>
-            <button label="Cancelar" class="cancelar">Cancelar</button>
+            <button label="Cancelar" (click)="mostrarInfo=false" class="cancelar">Cancelar</button>
             <button label="Carnetizate" class="carnetizate">Carnetizate</button>
         </div>
     </p-dialog>
