--- a/src/app/private/modules/carnetizate/carnetizate.component.html
+++ b/src/app/private/modules/carnetizate/carnetizate.component.html
@@ -1,13 +1,21 @@
 <div class="container">
     <div class="titulo-calendario">
-        <h3 *ngIf="user?.role == 1">Agenta tu cita para carnetizarte.</h3>
+        <h3 *ngIf="user?.role == 1 && !user?.carnet">Agenta tu turno para obtener tu carnet</h3>
+        <h3 *ngIf="user?.role == 1 && user?.carnet">Agenta tu turno para renovar tu carnet</h3>
         <full-calendar #calendar id="calendario"[options]='calendarOptions'></full-calendar>
     </div>
-    <p-dialog header="Desea realizar petición de nuevo carnet" [modal]="true" [draggable]="false" [resizable]="false" [(visible)]="mostrarInfo" [dismissableMask]="true">
-        <h3>Desea agendar turno para sacar tu carnet en la hora </h3>
-        <div>
-            <button label="Cancelar" class="cancelar">Cancelar</button>
-            <button label="Carnetizate" class="carnetizate">Carnetizate</button>
+    <p-dialog class="modal-carnetizate" [modal]="true" [draggable]="false" [resizable]="false" [(visible)]="mostrarInfo" [dismissableMask]="true" [breakpoints]="{'960px': '75vw'}" [style]="{width: '50vw'}">
+        <h3>
+            Desea agendar un turno para carnetizarte el {{infoFechaSeleccionada.getDate()}} de {{infoFechaSeleccionada.toLocaleString('default', { month: 'long' })}} a las {{infoFechaSeleccionada.getHours()}}:{{infoFechaSeleccionada.getMinutes()}}.
+        </h3>
+        <div class="field" *ngIf="user?.carnet">
+            <label for="codigo-pago" class="block">Ingrese el codigo de tu recibo de pago.</label>
+            <input placeholder="Código de pago" type="text" [(ngModel)]="codigoDePago" pInputText />
+            <span *ngIf="!(codigoDePago.length > 7)" class="p-error block">Ingrese un codigo de págo mayor a 7 carácteres.</span>
+        </div>
+        <div class="container-button">
+            <button label="Cancelar" (click) = "mostrarInfo=false" class="cancelar">Cancelar</button>
+            <button label="Carnetizate" [disabled] = "(!(codigoDePago.length > 7) && user?.carnet)" (click) = "crearTurno()" class="carnetizate">Carnetizate</button>
         </div>
     </p-dialog>
 </div>
