--- a/src/app/private/modules/carnetizate/carnetizate.component.scss
+++ b/src/app/private/modules/carnetizate/carnetizate.component.scss
@@ -1,28 +1,72 @@
 @import "src/styles/variables.scss";
 
+.container, .titulo-calendario{
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
 .titulo-calendario{
     display: flex;
     flex-direction: column;
-
+    width: 100%;
+    height: 100%;
 }
 
 h3{
     font-family: $font-family;
     font-size: $font-large;
+    color: $secondary-background-color;
     margin-top: 0;
     margin-bottom: 2rem;
     text-align: center;
 }
 
+.modal-carnetizate h3{
+    text-align: left;
+    font-weight: 400;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
 #calendario{
     font-family: $font-family;
     font-size: $font-medium;
+    height: 100%;
 }
 
-div{
+.p-dialog-title{
+    color: red;
+    font-size: 10rem;
+}
+
+.p-dialog-content{
+    color: red !important;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+}
+
+.field{
+    margin-bottom: 3.6rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    label{
+        font-family: $font-family;
+        font-size: $font-medium;
+        color: $secondary-background-color;
+    }
+
+    input{
+        font-size: $font-medium;
+        color: $secondary-background-color;
+        border-radius: 0;
+    }
+
+    span{
+        font-size: $font-medium;
+        margin-top: 0.8rem;
+    }
 }
 
 button{
@@ -31,6 +75,13 @@ button{
     font-weight: 500;
     width: 12rem;
     height: 3.6rem;
+}
+
+.container-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
 }
 
 .cancelar{
