--- a/src/app/private/modules/home/home.component.scss
+++ b/src/app/private/modules/home/home.component.scss
@@ -9,7 +9,7 @@
 .container div > h3{
     font-family: $font-family;
     font-size: $font-large;
-    color: $primary-color;
+    color: $secondary-background-color;
 }
 
 .carnet{
