--- a/src/app/private/modules/peticiones/peticiones.component.scss
+++ b/src/app/private/modules/peticiones/peticiones.component.scss
@@ -1,9 +1,13 @@
 @import "src/styles/variables.scss";
 
+.container{
+    height: 100%;
+}
+
 .titulo-calendario{
     display: flex;
     flex-direction: column;
-
+    height: 100%;
 }
 
 h3{
@@ -17,12 +21,7 @@ h3{
 #peticiones{
     font-family: $font-family;
     font-size: $font-medium;
-}
-
-div{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    height: 100%;
 }
 
 button{
