--- a/src/app/private/modules/buscar/buscar.component.html
+++ b/src/app/private/modules/buscar/buscar.component.html
@@ -1,50 +1,25 @@
-<!-- <div class="card">
-    <h5>Busqueda de peticiones de estudiantes.</h5>
-    <p-table #dt2 [value]="estudiante" dataKey="id"
-        [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading"
-        [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [globalFilterFields]="['name','country.name','representative.name','status']" [tableStyle]="{'min-width':'75rem'}">
-        <ng-template pTemplate="caption">
-            <div class="flex">
-                <span class="p-input-icon-left ml-auto">
-                    <i class="pi pi-search"></i>
-                    <input pInputText type="text" (input)="dt2.filterGlobal($event.target.value, 'contains')" placeholder="Buscar peticiones" />
-                </span>
-            </div>
-        </ng-template>
+<div class="card">
+    <h5>Multiple Columns</h5>
+    <p>Use metakey to add a column to the sort selection.</p>
+
+    <p-table [value]="turnos" sortMode="multiple" [tableStyle]="{'min-width': '60rem'}">
         <ng-template pTemplate="header">
             <tr>
-                <th style="width:22%">Código</th>
-                <th style="width:22%">Nombre</th>
-                <th style="width:22%">Tipo</th>
-                <th style="width:22%">Fecha del turno</th>
+                <th pSortableColumn="code" style="width:20%">Codigo de turno <p-sortIcon field="code"></p-sortIcon></th>
+                <th pSortableColumn="name" style="width:20%">Name <p-sortIcon field="name"></p-sortIcon></th>
+                <th pSortableColumn="category" style="width:20%">Category <p-sortIcon field="category"></p-sortIcon></th>
+                <th pSortableColumn="quantity" style="width:20%">Quantity <p-sortIcon field="quantity"></p-sortIcon></th>
+                <th pSortableColumn="price" style="width:20%">Price <p-sortIcon field="price"></p-sortIcon></th>
             </tr>
         </ng-template>
-        <ng-template pTemplate="body">
+        <ng-template pTemplate="body" let-product>
             <tr>
-                <td>
-                    Codigo del estudiante
-                </td>
-                <td>
-                    <img src="assets/showcase/images/demo/flag/flag_placeholder.png" [class]="'flag flag-' + customer.country.code" width="30">
-                    <span class="image-text">{{customer.country.name}}</span>
-                </td>
-                <td>
-                    <img [alt]="customer.representative.name" src="assets/showcase/images/demo/avatar/{{customer.representative.image}}" width="32" style="vertical-align: middle" />
-                    <span class="image-text">{{customer.representative.name}}</span>
-                </td>
-                <td>
-                    <span [class]="'customer-badge status-' + customer.status">{{customer.status}}</span>
-                </td>
-                <td>
-                    <i class="pi" [ngClass]="{'true-icon pi-check-circle': customer.verified, 'false-icon pi-times-circle': !customer.verified}"></i>
-                </td>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="emptymessage">
-            <tr>
-                <td colspan="5">No customers found.</td>
+                <td>1</td>
+                <td>!1</td>
+                <td>!</td>
+                <td>1</td>
+                <td>1</td>
             </tr>
         </ng-template>
     </p-table>
-</div> -->
+</div>
