--- a/src/app/private/modules/carnetizate/carnetizate.component.html
+++ b/src/app/private/modules/carnetizate/carnetizate.component.html
@@ -2,11 +2,12 @@
     <div class="titulo-calendario">
         <h3 *ngIf="user?.role == 1 && !user?.carnet">Agenta tu turno para obtener tu carnet</h3>
         <h3 *ngIf="user?.role == 1 && user?.carnet">Agenta tu turno para renovar tu carnet</h3>
-        <full-calendar #calendar id="calendario"[options]='calendarOptions'></full-calendar>
+        <full-calendar #calendar id="calendario" [options]='calendarOptions' ></full-calendar>
     </div>
+
     <p-dialog class="modal-carnetizate" [modal]="true" [draggable]="false" [resizable]="false" [(visible)]="mostrarInfo" [dismissableMask]="true" [breakpoints]="{'960px': '75vw'}" [style]="{width: '50vw'}">
         <h3>
-            Desea agendar un turno para carnetizarte el {{infoFechaSeleccionada.getDate()}} de {{infoFechaSeleccionada.toLocaleString('default', { month: 'long' })}} a las {{infoFechaSeleccionada.getHours()}}:{{infoFechaSeleccionada.getMinutes()}}.
+            Desea agendar un turno para carnetizarte el {{infoFechaSeleccionada.getDate()}} de {{infoFechaSeleccionada.toLocaleString('default', { month: 'long' })}} a las {{infoFechaSeleccionada.getHours()}}:{{infoFechaSeleccionada.getMinutes()}}?
         </h3>
         <div class="field" *ngIf="user?.carnet">
             <label for="codigo-pago" class="block">Ingrese el codigo de tu recibo de pago.</label>
@@ -17,5 +18,9 @@
             <button label="Cancelar" (click) = "mostrarInfo=false" class="cancelar">Cancelar</button>
             <button label="Carnetizate" [disabled] = "(!(codigoDePago.length > 7) && user?.carnet)" (click) = "crearTurno()" class="carnetizate">Carnetizate</button>
         </div>
+    </p-dialog>
+
+    <p-dialog class="modal-dialogo" [modal]="true" [draggable]="false" [resizable]="false" [(visible)]="mostrarDialogo" [dismissableMask]="true" [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}">
+        <p>{{leyenda}}</p>
     </p-dialog>
 </div>
