--- a/src/app/private/modules/carnetizate/carnetizate.component.scss
+++ b/src/app/private/modules/carnetizate/carnetizate.component.scss
@@ -24,27 +24,23 @@ h3{
 
 .modal-carnetizate h3{
     text-align: left;
-    font-weight: 400;
+    font-weight: 500;
     margin-left: 2rem;
     margin-right: 2rem;
+}
+
+.modal-dialogo p{
+    font-weight: 600;
+    align-self: center;
+    text-align: center;
+    color: $error-icon-color;
+    font-size: large;
 }
 
 #calendario{
     font-family: $font-family;
     font-size: $font-medium;
     height: 100%;
-}
-
-.p-dialog-title{
-    color: red;
-    font-size: 10rem;
-}
-
-.p-dialog-content{
-    color: red !important;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .field{
