--- a/src/app/private/modules/peticiones/peticiones.component.scss
+++ b/src/app/private/modules/peticiones/peticiones.component.scss
@@ -18,6 +18,27 @@ h3{
     text-align: center;
 }
 
+.container-modal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h5{
+    font-family: $font-family;
+    font-size: $font-large;
+    margin: 0;
+}
+
+.container-modal .informacion{
+    align-self: flex-start;
+    text-align: left;
+    p{
+        font-size: $font-medium;
+        font-weight: 600;
+    }
+}
+
 #peticiones{
     font-family: $font-family;
     font-size: $font-medium;
