--- a/src/app/private/modules/buscar/buscar.component.scss
+++ b/src/app/private/modules/buscar/buscar.component.scss
@@ -7,8 +7,20 @@
     width: 100%;
 }
 
+input{
+    width: 24rem;
+    font-size: $font-medium;
+    font-weight: 600;
+}
+
+.p-ripple, .p-paginator{
+    font-size: 10rem !important; 
+    color: red !important;
+}
+
 .card h5{
     font-size: $font-large;
     font-family: $font-family;
     text-align: center;
+    margin: 0 0 2.4rem 0;
 }
