--- a/src/app/private/modules/peticiones/peticiones.component.scss
+++ b/src/app/private/modules/peticiones/peticiones.component.scss
@@ -22,6 +22,7 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 45rem;
 }
 
 h5{
@@ -31,6 +32,9 @@ h5{
 }
 
 .container-modal .informacion{
+    margin-top: 1rem;
+    margin-bottom: 1.6rem;
+    margin-left: 1rem;
     align-self: flex-start;
     text-align: left;
     p{
@@ -53,7 +57,7 @@ button{
     height: 3.6rem;
 }
 
-.cancelar{
+.salir{
     color: $primary-color ;
     background-color: $primary-background-color;
     margin-right: 2rem;
