agregando historial de turnos version 2

--- a/src/app/private/modules/informacion/informacion.component.html
+++ b/src/app/private/modules/informacion/informacion.component.html
@@ -23,7 +23,7 @@
             </ng-template>
         </p-table>
     </div>
-    <div *ngIf="turnos.length == 0">
+    <div *ngIf="turnos.length == 0 && muestralo">
         <h5>No tienes turnos agendados, si tu carnet se ha perdido o averiado de invitamos a carnetizarte.</h5>
     </div>
 </div>
