--- a/src/app/private/modules/estadisticas/estadisticas.component.html
+++ b/src/app/private/modules/estadisticas/estadisticas.component.html
@@ -1,14 +1,28 @@
 <div class="container">
     <h5>Estadísticas sobre los turnos</h5>
-    <div class="graficos">
-        <div class="card">
-            <h6>Total de turnos en la historia</h6>
-            <p id="totalTurnos">{{turnos.length}}</p>
+    <div class="graficos grid">
+        <div>
+            <div class="card">
+                <h6>Total de turnos en la historia</h6>
+                <p id="totalTurnos">{{turnos.length}}</p>
+            </div>
+            <div class="card">
+                <h6>Total de turnos para mañana</h6>
+                <p id="totalTurnos">{{turnos.length}}</p>
+                <h6>Primera vez</h6>
+                <p id="totalTurnos">{{turnos.length}}</p>
+                <h6>Renovar</h6>
+                <p id="totalTurnos">{{turnos.length}}</p>
+            </div>
+
         </div>
         <div class="card">
             <h6>Estado de los turnos de hoy</h6>
-            <p-chart type="doughnut" [data]="dataTorta" [style]="{'width': '40rem'}"></p-chart>
-            <p-chart type="doughnut" [data]="dataTorta" [style]="{'width': '40rem'}"></p-chart>
+            <p-chart type="doughnut" [data]="dataTorta" [style]="{'width': '30rem'}"></p-chart>
+        </div>
+        <div class="card">
+            <p-chart type="doughnut" [data]="dataTorta" [style]="{'width': '30rem'}"></p-chart>
+
         </div>
     </div>
 </div>
