--- a/src/app/private/modules/estadisticas/estadisticas.component.scss
+++ b/src/app/private/modules/estadisticas/estadisticas.component.scss
@@ -3,7 +3,6 @@
 .container {
     max-height: 100%;
     max-width: 100%;
-    overflow-y: scroll;
 }
 
 .container h5{
@@ -15,8 +14,13 @@
     text-align: center;
 }
 
+.graficos{
+    overflow-y: scroll;
+}
+
 #totalTurnos{
-    margin-top: -1.5rem;
+    margin-top: -2rem;
+    margin-bottom: .5rem;
     font-family: $font-family;
     font-size: $font-biglarge;
     color: $green-05-color;
@@ -31,8 +35,12 @@
     justify-content: center;
     border-radius: 1.4rem;
     width: fit-content;
+    height: fit-content;
+    margin: 1rem;
     padding: 1rem;
-    border: 0.4rem $line-gray-separator solid;
+    padding-top: 0rem;
+    border: 0.1rem $line-gray-separator solid;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 h6{
@@ -40,4 +48,5 @@ h6{
     font-size: $font-medium;
     color: $secondary-background-color;
     text-align: center;
+    margin-top: 2rem;
 }
