--- a/src/app/private/modules/estadisticas/estadisticas.component.html
+++ b/src/app/private/modules/estadisticas/estadisticas.component.html
@@ -7,18 +7,18 @@
                 <p id="totalTurnos">{{turnos.length}}</p>
             </div>
             <div class="card">
-                <h6>Total de turnos para mañana</h6>
-                <p id="totalTurnos">{{turnos.length}}</p>
-                <h6>Primera vez</h6>
-                <p id="totalTurnos">{{turnos.length}}</p>
-                <h6>Renovar</h6>
-                <p id="totalTurnos">{{turnos.length}}</p>
+                <h6>Estado de los turnos de hoy</h6>
+                <p-chart type="doughnut" [data]="dataTorta" [style]="{'width': '25rem'}"></p-chart>
             </div>
-
+            
         </div>
         <div class="card">
-            <h6>Estado de los turnos de hoy</h6>
-            <p-chart type="doughnut" [data]="dataTorta" [style]="{'width': '30rem'}"></p-chart>
+            <h6>Total de turnos para mañana</h6>
+            <p id="totalTurnos">{{numTurnosManana}}</p>
+            <h6>Primera vez</h6>
+            <p id="totalTurnos">{{turnos.length}}</p>
+            <h6>Renovar</h6>
+            <p id="totalTurnos">{{turnos.length}}</p>
         </div>
         <div class="card">
             <p-chart type="doughnut" [data]="dataTorta" [style]="{'width': '30rem'}"></p-chart>
