--- a/src/app/private/modules/estadisticas/estadisticas.component.scss
+++ b/src/app/private/modules/estadisticas/estadisticas.component.scss
@@ -23,7 +23,7 @@
     margin-bottom: .5rem;
     font-family: $font-family;
     font-size: $font-biglarge;
-    color: $green-05-color;
+    color: $primary-color;
     text-align: center;
     font-weight: 700;
 }
